[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jentis-llmagentkit"
version = "1.0.1"
description = "Production-ready AI agent architectures with tool orchestration, parallel execution, and reasoning capabilities"
readme = "README.md"
authors = [
    {name = "Jentis Developer", email = "dev@jentis.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "agent", "llm", "tool-calling", "react", "parallel-execution", "reasoning"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/jentis/llmagentkit"
Documentation = "https://github.com/jentis/llmagentkit#readme"
Repository = "https://github.com/jentis/llmagentkit"
Issues = "https://github.com/jentis/llmagentkit/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jentis*"]
namespaces = true

[tool.setuptools.package-data]
jentis = ["**/*.md"]
